# llm_based_recommender

./: .gitignore  README.md  app.py  cli.py  context.index  embedding_store.py  pyproject.toml  reco_api.py  reco_engine.py  reco_engine_generation_prompt.md  recommender.py  recommender_prompt.md  run_app.sh  schema_defaults.py  test_api.py
benchmark/: README.md  __init__.py  baseline.py  configs.py  data_prep.py  evaluate.py  leaderboard.py  llm_engine.py  metrics.py  run_benchmark.py  run_config.py
benchmark/rankers/: __init__.py  features.py  gbdt.py  labels.py  two_tower.py
benchmark/results/: eval_pool.parquet  llm_score_cache.json  relevants.json  sampled_users.json
core/: configs.py  llms.py  logger.py  rag.py  reco_generator.py
core2/: configs.py  datasets.py  dbs.py  embeddings.py  features.py  item.md  llms.py  prompting.py  ranking.py  reco_engine.py  relevance_score_generator.md  retrieval.py  user.md  user_item_pair.md
core2/docs/: configs.yaml
data/: default_item_catalog.json  default_llminput.json  default_user_profile.json  default_user_profiles.json
data/sample_interactions/: interactions_01.parquet  interactions_02.parquet  interactions_03.parquet  interactions_04.parquet
data/sample_items/: items_01.parquet
data/sample_users/: users_01.parquet
scripts/: create_sample_parquet.py
scripts/data/sample_interactions/: interactions.parquet
store/: default_prompt_results.json  rendered_prompt.md
store/embeddings/: faiss.index  item_records.json  item_vectors.npy  user_faiss.index  user_records.json  user_vectors.npy
store/embeddings/default/: default_prompt_faiss.index  default_prompt_records.json  default_prompt_vectors.npy
store/embeddings/session/: prompt_faiss.index  prompt_records.json  prompt_vectors.npy  rendered_prompt.md  session_meta.json  user_records.json
teeeeeeeeeee/relevance_knowledge/: chroma.sqlite3
test_reco_engine/: default_prompt_results.json  llminput.json  rendered_prompt.md
test_reco_engine/docs/: configs.yaml
test_reco_engine/embeddings/: item_faiss.index  item_vectors.npy
test_reco_engine/embeddings/default/: default_prompt_faiss.index  default_prompt_records.json  default_prompt_vectors.npy
test_reco_engine/embeddings/session/: prompt_faiss.index  prompt_records.json  prompt_vectors.npy  rendered_prompt.md  session_meta.json  user_faiss.index  user_records.json  user_vectors.npy
