[tool.poetry]
name = "llm-based-recommender"
version = "0.1.0"
description = "LLM recommender system with BGE embeddings and FAISS retrieval"
authors = []
readme = "recommender_prompt.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.11,<3.14"
numpy = ">=1.24.0"
torch = ">=2.0.0,<3.0.0"
torchvision = ">=0.17.0"
transformers = ">=4.36.0"
faiss-cpu = ">=1.7.4"
streamlit = ">=1.32.0"
pandas = ">=2.0.0"
pyarrow = ">=14.0.0"
openai = ">=1.0.0"
pyyaml = ">=6.0.0"
sentence-transformers = ">=2.2.0"
langchain = ">=0.1.0"
langchain-community = ">=0.0.1"
langchain-huggingface = "^1.2.2"
chromadb = ">=0.5.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
